# sqz

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  install.ps1  install.sh  opencode.json  pyproject.toml  sqz-firefox.xpi
.cargo/: config.toml
.claude/: settings.local.json
.claude/hooks/: sqz.json
.cline/: hooks.json
.clinerules/hooks/: PreToolUse
.cursor/: hooks.json
.gemini/: settings.json
.github/workflows/: benchmarks.yml  docs.yml  publish.yml  release.yml
.windsurf/: hooks.json
completions/: sqz.fish  sqz.zsh
docs/: benchmark-vs-rtk.md  index.html
docs/doc/: crates.js  help.html  settings.html  src-files.js
docs/doc/search.index/: 005e2974d4e4.js  006642e1a6f8.js  0084eff64038.js  00efed6ae232.js  01c74fd4c355.js  028edd172d73.js  029795d844c5.js  02a79bdd7557.js  02b0be30f8e7.js  02cb36ceba26.js  031198ee8c7b.js  05f205847405.js  06208fbac47f.js  073a9b0ab6f1.js  07412d18ec23.js  075d0912ab29.js  080f99eb2720.js  085bb783bf2f.js  08bf5fbc685c.js  091707e638f5.js  0a4667510978.js  0a4b08053042.js  0af530152f69.js  0ca905a447a6.js  0df5341b2862.js  0f2522ddb416.js  0f45384e2e89.js  0f6a1b885b70.js  10d27670e8b1.js  11f30a14318c.js  1212a9e3bc8d.js  14115ca7214e.js  1495bea945f5.js  1655a7cd147f.js  169ae0082401.js  176541a937cd.js  179a07587065.js  17d90627c123.js  18373b83d25c.js  18d0aed56284.js  (+149 more)
docs/doc/search.index/crateNames/: d6114c22c14e.js
docs/doc/search.index/desc/: 4a9d5abcb57c.js
docs/doc/search.index/entry/: 0478a7476d41.js  5c7217068f16.js
docs/doc/search.index/function/: 364237cdfc7b.js
docs/doc/search.index/generic_inverted_index/: 3504661b40fb.js
docs/doc/search.index/name/: 4a5d015ec285.js
docs/doc/search.index/normalizedName/: 406a5c568b55.js
docs/doc/search.index/path/: da29fb7a7149.js
docs/doc/search.index/type/: 047b5a874bb2.js
docs/doc/sqz/: all.html  constant.DEFAULT_PRESET_TOML.html  constant.SQZ_BANNER.html  enum.Command.html  enum.TeeAction.html  fn.cmd_analyze.html  fn.cmd_compress.html  fn.cmd_cost.html  fn.cmd_dashboard.html  fn.cmd_discover.html  fn.cmd_export.html  fn.cmd_gain.html  fn.cmd_hook.html  fn.cmd_import.html  fn.cmd_init.html  fn.cmd_proxy.html  fn.cmd_resume.html  fn.cmd_stats.html  fn.cmd_status.html  fn.cmd_tee.html  fn.cmd_uninstall.html  fn.default_preset_dir.html  fn.format_bytes.html  fn.install_completions.html  fn.main.html  fn.require_engine.html  index.html  sidebar-items.js  struct.Cli.html
docs/doc/sqz/cli_proxy/: constant.CLI_PATTERNS.html  fn.content_hash.html  index.html  sidebar-items.js  struct.CacheEntry.html  struct.CliProxy.html
docs/doc/sqz/shell_hook/: constant.BASH_HOOK.html  constant.FISH_HOOK.html  constant.NUSHELL_HOOK.html  constant.POWERSHELL_HOOK.html  constant.ZSH_HOOK.html  enum.ShellHook.html  fn.home_dir.html  fn.install_hook_to_file.html  fn.powershell_profile_path.html  fn.uninstall_hook_from_file.html  index.html  sidebar-items.js  struct.HookError.html
docs/doc/sqz/tests/: index.html
docs/doc/sqz_engine/: all.html  index.html  sidebar-items.js
docs/doc/sqz_engine/adaptive_tree/: fn.build_tree.html  fn.compress_to_budget.html  index.html  sidebar-items.js  struct.SemanticNode.html
docs/doc/sqz_engine/advanced_search/: index.html  sidebar-items.js  struct.AdvancedSearch.html  struct.SearchResult.html
docs/doc/sqz_engine/ansi_strip/: index.html  sidebar-items.js  struct.AnsiStripper.html
docs/doc/sqz_mcp/: all.html  enum.McpTransport.html  fn.default_tool_definitions.html  index.html  sidebar-items.js  struct.McpServer.html  struct.ToolCallRequest.html  struct.ToolCallResponse.html
docs/doc/sqz_wasm/: all.html  index.html  sidebar-items.js  struct.SqzWasm.html
docs/integrations/: README.md
docs/integrations/level1/: continue.json  zed.json
docs/integrations/level2/: all-platforms.md  claude-code.md  cursor.md  kiro.md
docs/integrations/level3/: api-proxy.md  chrome-web-store.md  firefox-addons.md  jetbrains-marketplace.md  vscode-marketplace.md
extension/: background.js  manifest.json  sqz_wasm_bg.wasm
extension-firefox/: background.js  build.sh  manifest.json  sqz_wasm.js
extension-firefox/content/: chatgpt.js  common.js  perplexity.js
extension-firefox/popup/: popup.js
extension/content/: chatgpt.js  claude.js  common.js  gemini.js  grok.js
extension/popup/: popup.html  popup.js
extension/tests/: content.test.js
homebrew/: sqz.rb
jetbrains-plugin/: build.gradle.kts  gradlew  gradlew.bat
npm/: README.md  install.js  package.json
presets/: code-review.toml  debug.toml  docs.toml
python/sqz/: __init__.py  __main__.py
sqz/: Cargo.toml
sqz-mcp/: Cargo.toml
sqz-mcp/src/: lib.rs  main.rs
sqz-wasm/: Cargo.toml
sqz-wasm/src/: lib.rs
sqz/completions/: sqz.bash  sqz.nu  sqz.ps1
sqz/src/: cli_proxy.rs  main.rs  shell_hook.rs  tests.rs
sqz/tests/: integration.rs
sqz_engine/: Cargo.toml
sqz_engine/examples/: basic_compress.rs  cache_dedup.rs  json_compress.rs  preset_config.rs
sqz_engine/proptest-regressions/: cache_manager.txt  parse_tree_compressor.txt  pipeline.txt  sandbox_executor.txt  tool_selector.txt  toon.txt
sqz_engine/src/: adaptive_tree.rs  advanced_search.rs  ansi_strip.rs  api_proxy.rs  ast_delta.rs  ast_parser.rs  benchmarks.rs  bpe_compressor.rs  budget_tracker.rs  cache_manager.rs  cascade_compressor.rs  claude_md_integration.rs  cmd_formatters.rs  codex_integration.rs  compression_quality.rs  confidence_router.rs  context_evictor.rs  correction_log.rs  cost_calculator.rs  crp_engine.rs  ctx_format.rs  dashboard.rs  delta_encoder.rs  dependency_mapper.rs  dict_compressor.rs  engine.rs  entropy_analyzer.rs  entropy_truncator.rs  error.rs  file_reader.rs  hook_manager.rs  image_compressor.rs  json_projection.rs  kv_cache_optimizer.rs  lib.rs  litm_positioner.rs  mdl_selector.rs  minhash_lsh.rs  model_router.rs  ngram_abbreviator.rs  (+28 more)
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: extension.ts  sqzBridge.ts  statusBar.ts
vscode-extension/src/test/: extension.test.ts
(+485 files in other folders)
