[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqz"
version = "0.5.0"
description = "Universal context intelligence layer — compresses LLM context across CLI, MCP, browser, and IDE"
readme = "README.md"
license = { text = "Elastic License 2.0 (ELv2)" }
requires-python = ">=3.8"
keywords = ["llm", "context", "compression", "mcp", "ai", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/ojuschugh1/sqz"
Repository = "https://github.com/ojuschugh1/sqz"

[project.scripts]
sqz = "sqz.__main__:main"
sqz-mcp = "sqz.__main__:main_mcp"

[tool.setuptools.packages.find]
where = ["python"]
