[package]
name = "sqz-mcp"
version = "0.8.0"
edition = "2021"
description = "MCP server for sqz — expose LLM context compression over Model Context Protocol (stdio/SSE)"
license-file = "../LICENSE"
repository = "https://github.com/ojuschugh1/sqz"
homepage = "https://github.com/ojuschugh1/sqz"
keywords = ["llm", "mcp", "compression", "context", "ai"]
categories = ["command-line-utilities", "web-programming"]
readme = "../README.md"

[[bin]]
name = "sqz-mcp"
path = "src/main.rs"

[lib]
name = "sqz_mcp"
path = "src/lib.rs"

[dependencies]
sqz-engine = { path = "../sqz_engine", version = "0.8.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
notify = "6"

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
