[package]
name = "sqz-wasm"
version = "1.0.4"
edition = "2021"
description = "Browser WASM build of sqz — LLM context compression for browser extensions"
license-file = "../LICENSE"
repository = "https://github.com/ojuschugh1/sqz"
homepage = "https://github.com/ojuschugh1/sqz"
keywords = ["llm", "wasm", "compression", "browser", "ai"]
categories = ["wasm", "text-processing"]
readme = "../README.md"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
