[package]
name = "sqz-cli"
version = "1.0.5"
edition = "2021"
description = "Universal LLM context compressor — squeeze tokens from prompts, code, JSON, logs, and conversations"
license-file = "../LICENSE"
repository = "https://github.com/ojuschugh1/sqz"
homepage = "https://github.com/ojuschugh1/sqz"
keywords = ["llm", "compression", "context", "cli", "ai"]
categories = ["command-line-utilities", "text-processing"]
readme = "../README.md"
include = ["src/**/*", "completions/*", "../LICENSE", "../README.md"]

[[bin]]
name = "sqz"
path = "src/main.rs"

[dependencies]
sqz-engine = { path = "../sqz_engine", version = "1.0.5" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
