[package]
name = "sqz-engine"
version = "0.3.0"
edition = "2021"
description = "Adaptive multi-pass LLM context compression engine — content-aware pipeline with AST parsing, token counting, session persistence, and budget tracking"
license-file = "../LICENSE"
repository = "https://github.com/ojuschugh1/sqz"
homepage = "https://github.com/ojuschugh1/sqz"
keywords = ["llm", "compression", "context", "tokens", "ai"]
categories = ["text-processing", "command-line-utilities"]
readme = "../README.md"
exclude = ["proptest-regressions/"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-bash = "0.21"
notify = "6"
tempfile = "3"
tiktoken-rs = "0.6"
dirs-next = "2.0"

[dev-dependencies]
proptest = { workspace = true }
